+ Fixing cut off cart toggle

--- a/assets/header.css
+++ b/assets/header.css
@@ -439,7 +439,7 @@ header-drawer {
 
 
 .header__icon--cart .icon {
-  width: 2.1rem;
+  width: 2.2rem;
   height: 2.1rem;
 }
 
